modified:   accounting_system/transactions/templates/transactions/add_transaction.html

--- a/accounting_system/transactions/templates/transactions/home.html
+++ b/accounting_system/transactions/templates/transactions/home.html
@@ -15,9 +15,7 @@
             background-size: cover;
             color: white;
             margin: 0;
-            /* Remove default margin to ensure the background covers the entire viewport */
-            font-family: 'Open Sans', sans-serif; /* Apply the custom font */
-        }
+            font-family: 'Open Sans', sans-serif; 
 
         .container {
             display: flex;
@@ -31,9 +29,7 @@
             height: 100vh;
             background-color: black;
             color: white;
-            /* Text color for the welcome message */
             padding: 20px;
-            /* Padding for the container */
         }
 
         .btn-lg {
@@ -49,7 +45,6 @@
         .buttons {
             display: flex;
             flex-direction: row;
-            /* Ensure buttons are positioned horizontally */
             justify-content: center;
             text-align: center;
             margin-top: 20px;
