--- a/accounting_system/transactions/templates/transactions/add_transaction.html
+++ b/accounting_system/transactions/templates/transactions/add_transaction.html
@@ -1,4 +1,3 @@
-<!-- transactions/templates/transactions/add_transaction.html -->
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
@@ -45,53 +44,53 @@
       <img src="{% static 'logo.svg' %}" alt="Your Logo" class="logo card-header" />
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-md-8">
-          <div style="padding-left: 20px; padding-bottom: 30px; padding-top: 20px;">
-            <h1 class="mt-4">Add Transaction</h1>
+      <div style="padding-left: 20px; padding-bottom: 30px; padding-top: 20px;">
+        <h1 class="mt-4">Add Transaction</h1>
 
-            <form method="post">
-              {% csrf_token %}
+        <form method="post">
+          {% csrf_token %}
 
-              <div class="form-group">{{ form.as_p }}</div>
+          <div class="form-group">{{ form.as_p }}</div>
 
-              <button type="submit" class="btn btn-primary">Add</button>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-4 d-flex justify-content-center">
-        </div>
+          <button type="submit" class="btn btn-primary">Add</button>
+        </form>
       </div>
+
+      <div class="col-md-4 d-flex justify-content-center"></div>
     </div>
     {% if new_transaction %}
-      <div class="mt-4 container">
-        <h2>Just Entered Transaction</h2>
-        <p>
-          <strong>Date:</strong> {{ new_transaction.date }}
-        </p>
-        <p>
-          <strong>Category:</strong> {{ new_transaction.category }}
-        </p>
-        <p>
-          <strong>Amount:</strong> ${{ new_transaction.amount }}
-        </p>
-        <p>
-          <strong>Mode of Payment:</strong> {{ new_transaction.mode_of_payment }}
-        </p>
+      <div class="container">
+        <div class="mt-4 container" style="padding-left: 20px; padding-bottom: 30px; padding-top: 20px;">
+          <h2>Just Entered Transaction</h2>
+          <p>
+            <strong>Date:</strong> {{ new_transaction.date }}
+          </p>
+          <p>
+            <strong>Category:</strong> {{ new_transaction.category }}
+          </p>
+          <p>
+            <strong>Amount:</strong> ${{ new_transaction.amount }}
+          </p>
+          <p>
+            <strong>Mode of Payment:</strong> {{ new_transaction.mode_of_payment }}
+          </p>
+        </div>
       </div>
     {% endif %}
-
-    <div class="mt-4">
-      <h2>Previous Transactions</h2>
-      <ul class="list-group">
-        {% for transaction in transactions %}
-          <li class="list-group-item">{{ transaction.date }} - {{ transaction.category }} - ${{ transaction.amount }}</li>
-        {% endfor %}
-      </ul>
+    <div class="container">
+      <div class="mt-4" style="padding-left: 20px; padding-bottom: 30px; padding-top: 20px;">
+        <h2>Previous Transactions</h2>
+        <ul class="list-group" style="background-color: #b8444e;">
+          {% for transaction in transactions %}
+            <li class="list-group-item">{{ transaction.date }} - {{ transaction.category }} - ${{ transaction.amount }}</li>
+          {% endfor %}
+        </ul>
+      </div>
     </div>
-
-    <a href="{% url 'generate_report' %}" class="btn btn-success mt-4">Generate Report</a>
-    <a href="{% url 'logout' %}" class="btn btn-danger mt-4">Logout</a>
+    <div class="card" style="background-color: #ed98a3; display: flex; justify-content: center; align-items: center;">
+      <a href="{% url 'generate_report' %}" class="btn btn-success mt-4">Generate Report</a>
+      <a href="{% url 'logout' %}" class="btn btn-danger mt-4">Logout</a>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
